--- a/index.html
+++ b/index.html
@@ -89,17 +89,19 @@
                     <option value="dippedWaffle">Chocolate Dipped Waffle Cone</option>
                 </select>
             </fieldset>
-
-            <fieldset>
-                <legend>Special:</legend>
-            </div>
+        </div>
             <div>
-                <label for="Special Requests:"</label>
+                <fieldset>
+                    <legend>Special:</legend>
+                <label for="SpecialRequests:">Special Request</label>
                 <textarea id="SpecialRequests" name="SpecialRequests" rows="4" cols="10"
                           placeholder="Allergic to peanuts, substitutions, etc."></textarea>
+                </fieldset>
             </div>
+        <button type="button" onclick="alert('Free today for our Grand Opening!')">Calculate Cost</button>
+        <button type="submit">Submit Order</button>
 
-        </fieldset>
+
     </form>
 </div>
 
